<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.avaje</groupId>
    <artifactId>java11-oss</artifactId>
    <version>3.10</version>
  </parent>

  <groupId>io.avaje</groupId>
  <artifactId>avaje-validator-parent</artifactId>
  <version>0.1-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>validator parent</name>
  <description>parent pom for validator</description>

  <scm>
    <connection>scm:git:git@github.com:avaje/avaje-validator.git</connection>
    <developerConnection>scm:git:git@github.com:avaje/avaje-validator.git</developerConnection>
    <tag>avaje-validator-parent-0.1</tag>
  </scm>

  <properties>
    <surefire.useModulePath>false</surefire.useModulePath>
    <nexus.staging.autoReleaseAfterClose>true</nexus.staging.autoReleaseAfterClose>
    <java.version>17</java.version>
    <java.release>17</java.release>
  </properties>

  <modules>
    <module>validator</module>
    <module>validator-constraints</module>
    <module>validator-generator</module>
  </modules>

  <profiles>
    <profile>
      <id>central</id>
    </profile>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>blackbox-test</module>
      </modules>
    </profile>
  </profiles>

</project>
